--- a/resources/css/project.css
+++ b/resources/css/project.css
@@ -17,6 +17,24 @@
     --bg: #002d50;
     --hl: #f3ff82;
   }
+
+
+  nav{
+    width: calc(100vw - 15px)!important;
+  }
+  
+  .crumbs{
+    margin-left: -190px!important;
+  }
+  
+  @media only screen and (hover: none) and (pointer: coarse){
+    nav{
+      width: 100%!important;
+    }
+    .crumbs{
+      margin-left: 0!important;
+    }
+  }
 .navbar-brand{
   font-family: 'Brush Script MT';
 }
@@ -132,7 +150,7 @@ input[name="GCategs[]"]{
   cursor: pointer;
 }
 
-@media screen and (576px <= width <= 600px){
+@media screen and (576px <= width <= 657px){
   .breadcrumb li a{
     padding: .2rem .5rem;
   }
